tests/errors/err_missing_equals.bas
10 LET X 5
20 PRINT X
