tests/errors/err_missing_equals.bas.expected
ERROR at line 10: Syntax error in LET statement
  10 LET X 5
           ^

Compilation failed with 1 error(s)
